--- a/student-portal.html
+++ b/student-portal.html
@@ -288,7 +288,7 @@
     // If no token or wrong role, kick them out immediately
     if (!token || role !== 'student') {
         console.error("Auth Failure:", { token: !!token, role });
-        alert("Session Expired. Please log in.");
+        alert("Please log in.");
         window.location.href = 'login.html';
     } else {
         // If successful, show the name
