--- a/student-portal.html
+++ b/student-portal.html
@@ -278,26 +278,19 @@
     </div>
 
     <script src="student.js"></script>
-   <script>
-  // Robust Auth Check
-  (function() {
-    const role = localStorage.getItem('p2p_role');
-    const token = localStorage.getItem('p2p_token');
-    const name = localStorage.getItem('p2p_name');
+  <script>
+  window.onload = function() {
+      const role = localStorage.getItem('p2p_role');
+      const token = localStorage.getItem('p2p_token');
+      
+      // Change 'student' to 'tutor' in the tutor-portal.html file
+      const requiredRole = 'student'; 
 
-    // If no token or wrong role, kick them out immediately
-    if (!token || role !== 'student') {
-        console.error("Auth Failure:", { token: !!token, role });
-        alert("Please log in.");
-        window.location.href = 'login.html';
-    } else {
-        // If successful, show the name
-        document.addEventListener('DOMContentLoaded', () => {
-            const display = document.getElementById('studentNameDisplay');
-            if (display) display.innerText = name || "Student";
-        });
-    }
-  })();
+      if (!token || role !== requiredRole) {
+          console.log("Auth failed. Redirecting...");
+          window.location.href = 'login.html';
+      }
+  };
 </script>
 </body>
 </html>
