--- a/student-portal.html
+++ b/student-portal.html
@@ -279,18 +279,19 @@
 
     <script src="student.js"></script>
   <script>
-  window.onload = function() {
+  // Simplified permanent session check
+  (function() {
       const role = localStorage.getItem('p2p_role');
       const token = localStorage.getItem('p2p_token');
       
-      // Change 'student' to 'tutor' in the tutor-portal.html file
+      // For student-portal.html use 'student', for tutor-portal.html use 'tutor'
       const requiredRole = 'student'; 
 
       if (!token || role !== requiredRole) {
-          console.log("Auth failed. Redirecting...");
+          // No alert needed here to avoid annoying the user
           window.location.href = 'login.html';
       }
-  };
+  })();
 </script>
 </body>
 </html>
