--- a/tutor-portal.html
+++ b/tutor-portal.html
@@ -133,21 +133,18 @@
 
 <script src="tutor.js"></script>
 <script>
-  // Patient Security Guard for Tutors
-  window.addEventListener('load', () => {
+  window.onload = function() {
       const role = localStorage.getItem('p2p_role');
       const token = localStorage.getItem('p2p_token');
       
-      // We check for 'tutor'. If it's missing, redirect.
+      // If token is missing or role is wrong, redirect to login
       if (!token || role !== 'tutor') {
-          console.warn("Auth Guard: Missing credentials for Tutor");
           window.location.href = 'login.html';
       } else {
-          // Fill in the name if the element exists
-          const nameDisplay = document.getElementById('tutorNameDisplay');
-          if(nameDisplay) nameDisplay.innerText = localStorage.getItem('p2p_name') || "Tutor";
+          // Update the display name
+          document.getElementById('tutorNameDisplay').innerText = localStorage.getItem('p2p_name') || "Tutor";
       }
-  });
+  };
 </script>
 </body>
 </html>
