fix login with cookies

--- a/tutor-portal.html
+++ b/tutor-portal.html
@@ -130,16 +130,8 @@
         </section>
     </main>
 </div>
-
+<script src="auth.js"></script>
 <script src="tutor.js"></script>
-<script>
-  window.onload = function() {
-    const role = localStorage.getItem('p2p_role');
-    const token = localStorage.getItem('p2p_token');
-    if (!token || role !== 'tutor') {
-        window.location.href = 'login.html';
-    }
-};
-</script>
+
 </body>
 </html>
