--- a/student-portal.html
+++ b/student-portal.html
@@ -276,16 +276,8 @@
             </div>
         </div>
     </div>
-
+    <script src="auth.js"></script>
     <script src="student.js"></script>
-  <script>
-  window.onload = function() {
-    const role = localStorage.getItem('p2p_role');
-    const token = localStorage.getItem('p2p_token');
-    if (!token || role !== 'student') {
-        window.location.href = 'login.html';
-    }
-};
-</script>
+
 </body>
 </html>
