--- a/login.html
+++ b/login.html
@@ -7,13 +7,17 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="login.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+  
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
-<script type="text/javascript">
-   (function(){
-      emailjs.init("1MGUTlF8hOxhOc27a"); // Replace with your actual Public Key
-   })();
-</script>
-
+  
+  <script type="text/javascript">
+    (function(){
+       if (typeof emailjs !== 'undefined') {
+           emailjs.init("1MGUTlF8hOxhOc27a"); // Your Public Key
+           console.log("EmailJS initialized correctly.");
+       }
+    })();
+  </script>
 </head>
 <body>
 
@@ -54,7 +58,6 @@
     <div class="form-box">
       <h2>Create Account</h2>
       <form id="signupForm">
-        
         <div class="form-grid">
           <div class="input-group">
             <label>First Name</label>
@@ -119,25 +122,17 @@
 
         <div class="tc-container">
           <details>
-            <summary><i class="fas fa-file-contract"></i> Legal & Data Use Agreement (Read Carefully)</summary>
+            <summary><i class="fas fa-file-contract"></i> Legal & Data Use Agreement</summary>
             <div class="tc-content">
               <h4>1. Intellectual Property & Branding</h4>
-              <p>The "Peer-2-Peer PRO" name, logo, and <strong>favicon</strong> are the exclusive property of Peer-2-Peer. Unauthorized reproduction or use of these brand assets is strictly prohibited.</p>
-
-              <h4>2. Commercial Data Consent (Material Condition)</h4>
-              <p>In accordance with Part B of the Enrollment Agreement, you explicitly consent that Peer-2-Peer PRO may process, aggregate, and sell <strong>anonymized and aggregated data</strong> to registered third parties or academic research partners for lawful commercial purposes. This data usage is a material condition of using this platform.</p>
-
-              <h4>3. POPIA & Privacy</h4>
-              <p>We process personal information in compliance with the Protection of Personal Information Act (POPIA). Your sensitive identifiers (ID numbers/Addresses) are protected and never sold.</p>
-
-              <h4>4. Conduct & Termination</h4>
-              <p>Misconduct, including academic dishonesty or harassment, will result in immediate account termination without refund as per Section 1.1 of the Service Agreement.</p>
+              <p>The "Peer-2-Peer PRO" name and logo are exclusive property.</p>
+              <h4>2. Commercial Data Consent</h4>
+              <p>You consent to anonymized data processing for commercial purposes as a condition of use.</p>
             </div>
           </details>
-          
           <label class="checkbox-label">
             <input type="checkbox" name="agreeTerms" required> 
-            <span>I have read the terms and agree to the lawful commercial use of my data.</span>
+            <span>I agree to the terms and lawful commercial use of my data.</span>
           </label>
         </div>
 
@@ -146,30 +141,30 @@
     </div>
   </div>
 </div>
-</body>
+
 <div id="forgotModal" style="display:none; position: fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.85); z-index:1000; align-items:center; justify-content:center; backdrop-filter: blur(5px);">
-  <div style="background:#1a1a2e; padding:30px; border-radius:15px; width:90%; max-width:400px; border:1px solid #6e8efb; box-shadow: 0 0 20px rgba(110,142,251,0.3);">
-    <h3 style="margin-top:0;">Reset Password</h3>
-    <p style="color: #ccc; font-size: 0.9rem;">Enter your email and we'll send you a secure recovery link.</p>
-    <input type="email" id="forgotEmail" placeholder="Enter your registered email" style="width:100%; padding:12px; margin:15px 0; background:#0f0f23; border:1px solid #333; color:white; border-radius:5px; box-sizing: border-box;">
+  <div style="background:#1a1a2e; padding:30px; border-radius:15px; width:90%; max-width:400px; border:1px solid #6e8efb;">
+    <h3>Reset Password</h3>
+    <p style="color: #ccc; font-size: 0.9rem;">Enter your email for a secure recovery link.</p>
+    <input type="email" id="forgotEmail" placeholder="email@example.com" style="width:100%; padding:12px; margin:15px 0; background:#0f0f23; border:1px solid #333; color:white; border-radius:5px;">
     <button onclick="handleForgotSubmit()" id="forgotBtn" style="width:100%; padding:12px; background:#6e8efb; border:none; color:white; border-radius:5px; cursor:pointer; font-weight:bold;">Send Recovery Link</button>
     <button onclick="closeForgotModal()" style="width:100%; margin-top:10px; background:transparent; border:none; color:#888; cursor:pointer;">Close</button>
   </div>
 </div>
+
 <script src="login.js"></script>
+
 <footer class="footer">
   <div class="footer-inner">
     <div class="footer-box">
       <h4>Contact</h4>
       <p>Support: <a href="mailto:info@peer-2-peer.co.za">info@peer-2-peer.co.za</a></p>
     </div>
-    <div class="footer-box">
-      <h4>Quick Links</h4>
-      <a href="index.html">Home</a>
-      <a href="resources.html">Resources</a>
-    </div>
   </div>
   <div class="footer-bottom">
     &copy; 2026 Peer-2-Peer PRO. All Rights Reserved.
   </div>
 </footer>
+
+</body>
+</html>
