--- a/login.html
+++ b/login.html
@@ -13,8 +13,7 @@
   <script type="text/javascript">
     (function(){
        if (typeof emailjs !== 'undefined') {
-           emailjs.init("1MGUTlF8hOxhOc27a"); // Your Public Key
-           console.log("EmailJS initialized correctly.");
+           emailjs.init("1MGUTlF8hOxhOc27a"); 
        }
     })();
   </script>
