--- a/tutor-portal.html
+++ b/tutor-portal.html
@@ -1,137 +1,137 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Tutor Portal | Control Center</title>
     <link rel="stylesheet" href="tutor.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <script src='https://meet.jit.si/external_api.js'></script>
 </head>
+
 <body class="light-mode">
 
-<nav class="glass-nav">
-    <div class="logo-glow">Peer-2-Peer <span class="premium">TUTOR</span> | Control Center</div>
-    <div class="nav-right">
-        <button class="logout-minimal" onclick="logout()">
-            <i class="fas fa-sign-out-alt"></i> Logout
-        </button>
-    </div>
-</nav>
-
-<div class="dashboard-wrapper">
-    <aside class="side-panel">
-        <div class="profile-summary">
-            <i class="fas fa-chalkboard-teacher fa-3x"></i>
-            <h3 id="tutorNameDisplay">Tutor Name</h3>
-            <span class="badge">Verified Tutor</span>
-        </div>
-    </aside>
-
-    <main class="main-panel">
-        <header class="panel-header">
-            <h1>Tutor Control Center</h1>
-        </header>
-
-        <!-- Live Session Section -->
-        <section class="tutor-control-section">
-            <div class="section-header">
-                <h3><i class="fas fa-broadcast-tower"></i> Live Studio Control</h3>
-                <div id="liveStatusBadge" class="status-badge offline">Offline</div>
-            </div>
-            <div class="live-card">
-                <div class="input-grid">
-                    <div class="input-group">
-                        <label>Lesson Topic</label>
-                        <input type="text" id="lessonTopic" placeholder="e.g. Matrix Multiplication">
-                    </div>
-                    <div class="input-group">
-                        <label>Subject</label>
-                        <select id="lessonSubject">
-                            <option value="Mathematics">Mathematics</option>
-                            <option value="Physical Sciences">Physical Sciences</option>
-                            <option value="Accounting">Accounting</option>
-                            <option value="Geography">Geography</option>
-                            <option value="Life Sciences">Life Sciences</option>
-                            <option value="Business Studies">Business Studies</option>
-                        </select>
-                    </div>
-                    <div class="input-group">
-                        <label>Start Date & Time</label>
-                        <input type="datetime-local" id="lessonTime">
-                    </div>
-                    <div class="input-group">
-                        <label>Meeting Link</label>
-                        <input type="text" id="meetingLink" placeholder="Zoom/Google Meet URL">
-                    </div>
-                </div>
-                <div class="button-group">
-                    <button id="startBtn" onclick="saveAndToggleLive(true)" class="btn-start">
-                        <i class="fas fa-broadcast-tower"></i> Go Live & Save
-                    </button>
-                    <button id="endBtn" onclick="saveAndToggleLive(false)" class="btn-end" style="display:none">
-                        <i class="fas fa-stop"></i> End Session
-                    </button>
-                </div>
-            </div>
-        </section>
-
-        <!-- Upload Section -->
-        <section class="management-card">
-            <div class="section-header">
-                <h3><i class="fas fa-cloud-upload-alt"></i> Upload Study Material</h3>
-            </div>
-            
-            <div class="input-group">
-                <label>Document Title</label>
-                <input type="text" id="studentFileName" placeholder="e.g., Grade 12 Math - Calculus Summary">
-            </div>
-
-            <div class="input-group">
-                <label>Subject Category</label>
-                <select id="materialSubject" class="luxury-select">
-                    <option value="Mathematics">Mathematics</option>
-                    <option value="Physical Sciences">Physical Sciences</option>
-                    <option value="Accounting">Accounting</option>
-                    <option value="English">English</option>
-                    <option value="Geography">Geography</option>
-                </select>
-            </div>
-
-            <div id="drop-zone" class="drop-zone">
-                <i class="fas fa-cloud-upload-alt fa-3x"></i>
-                <p id="drop-text">Drag & drop files here or <span>click to browse</span></p>
-                <input type="file" id="fileInput" accept=".pdf, .doc, .docx, .ppt, .pptx, .xls, .xlsx, .txt, .zip" hidden />
-            </div>
-
-            <div id="active-upload-status" style="display: none;">
-                <div class="progress-ring-wrapper">
-                    <svg class="progress-ring" width="120" height="120">
-                        <circle class="progress-ring__circle-bg" stroke="rgba(0,0,0,0.05)" stroke-width="8" fill="transparent" r="52" cx="60" cy="60"/>
-                        <circle id="uploadProgressCircle" class="progress-ring__circle" stroke="#32cd32" stroke-width="8" stroke-dasharray="326.7" stroke-dashoffset="326.7" stroke-linecap="round" fill="transparent" r="52" cx="60" cy="60"/>
-                    </svg>
-                    <div class="progress-text" id="progressPercent">0%</div>
-                </div>
-                <p class="upload-hint">Deploying to secure servers...</p>
-            </div>
-
-            <button class="btn-deploy" id="uploadBtn">
-                <i class="fas fa-rocket"></i> Start Deployment
+    <nav class="glass-nav">
+        <div class="logo-glow">Peer-2-Peer <span class="premium">TUTOR</span> | Control Center</div>
+        <div class="nav-right">
+            <button class="logout-minimal" onclick="logout()">
+                <i class="fas fa-sign-out-alt"></i> Logout
             </button>
-        </section>
+        </div>
+    </nav>
 
-        <!-- Meetings List Section -->
-        <section class="management-card">
-            <div class="section-header">
-                <h3><i class="fas fa-calendar-check"></i> My Scheduled Meetings</h3>
-                <span id="meetingCount" class="badge-count">0 meetings</span>
+    <div class="dashboard-wrapper">
+        <aside class="side-panel">
+            <div class="profile-summary">
+                <i class="fas fa-chalkboard-teacher fa-3x"></i>
+                <h3 id="tutorNameDisplay">Tutor Name</h3>
+                <span class="badge">Verified Tutor</span>
             </div>
-            <div id="myMeetingsList" class="file-grid">
-                <div class="loading-state">Loading meetings...</div>
-            </div>
-        </section>
-    </main>
-</div>
-<script src="auth.js"></script>
-<script src="tutor.js"></script>
+        </aside>
+
+        <main class="main-panel">
+            <header class="panel-header">
+                <h1>Tutor Control Center</h1>
+            </header>
+
+            <section class="management-card" id="live-setup-section">
+                <div class="section-header">
+                    <h3><i class="fas fa-video"></i> Live Classroom Management</h3>
+                    <div id="liveStatusBadge" class="status-badge offline">Offline</div>
+                </div>
+
+                <div id="setup-form">
+                    <div class="input-grid">
+                        <div class="input-group">
+                            <label for="classTopic">Class Subject/Topic</label>
+                            <input type="text" id="classTopic" placeholder="e.g. Grade 12 Mathematics - Algebra">
+                        </div>
+                        <div class="input-group">
+                            <label for="classDesc">Lesson Description</label>
+                            <textarea id="classDesc"
+                                style="padding: 12px; border: 1px solid var(--border-color); border-radius: 8px; font-family: inherit; min-height: 80px;"
+                                placeholder="Describe what learners will achieve in this session..."></textarea>
+                        </div>
+                    </div>
+                    <button class="btn-deploy" onclick="setClassDetails()">
+                        <i class="fas fa-check-circle"></i> Set Class Details
+                    </button>
+                </div>
+
+                <div id="start-live-container" style="display: none; margin-top: 20px; text-align: center;">
+                    <p style="margin-bottom: 15px;">Class is ready: <strong id="displayTopic"></strong></p>
+                    <button id="startLiveBtn" class="btn-deploy" style="background: #ff4757; color: white;">
+                        <i class="fas fa-broadcast-tower"></i> Start Live Meeting Now
+                    </button>
+                </div>
+            </section>
+
+            <section id="video-area"
+                style="display: none; background: #000; border-radius: 12px; overflow: hidden; margin-top: 20px; min-height: 700px;">
+            </section>
+
+            <section class="management-card">
+                <div class="section-header">
+                    <h3><i class="fas fa-cloud-upload-alt"></i> Upload Study Material</h3>
+                </div>
+
+                <div class="input-group">
+                    <label>Document Title</label>
+                    <input type="text" id="studentFileName" placeholder="e.g., Grade 12 Math - Calculus Summary">
+                </div>
+
+                <div class="input-group">
+                    <label>Subject Category</label>
+                    <select id="materialSubject" class="luxury-select">
+                        <option value="Mathematics">Mathematics</option>
+                        <option value="Physical Sciences">Physical Sciences</option>
+                        <option value="Accounting">Accounting</option>
+                        <option value="English">English</option>
+                        <option value="Geography">Geography</option>
+                    </select>
+                </div>
+
+                <div id="drop-zone" class="drop-zone">
+                    <i class="fas fa-cloud-upload-alt fa-3x"></i>
+                    <p id="drop-text">Drag & drop files here or <span>click to browse</span></p>
+                    <input type="file" id="fileInput" accept=".pdf, .doc, .docx, .ppt, .pptx, .xls, .xlsx, .txt, .zip"
+                        hidden />
+                </div>
+
+                <div id="active-upload-status" style="display: none;">
+                    <div class="progress-ring-wrapper">
+                        <svg class="progress-ring" width="120" height="120">
+                            <circle class="progress-ring__circle-bg" stroke="rgba(0,0,0,0.05)" stroke-width="8"
+                                fill="transparent" r="52" cx="60" cy="60" />
+                            <circle id="uploadProgressCircle" class="progress-ring__circle" stroke="#32cd32"
+                                stroke-width="8" stroke-dasharray="326.7" stroke-dashoffset="326.7"
+                                stroke-linecap="round" fill="transparent" r="52" cx="60" cy="60" />
+                        </svg>
+                        <div class="progress-text" id="progressPercent">0%</div>
+                    </div>
+                    <p class="upload-hint">Deploying to secure servers...</p>
+                </div>
+
+                <button class="btn-deploy" id="uploadBtn">
+                    <i class="fas fa-rocket"></i> Start Deployment
+                </button>
+            </section>
+
+            <section class="management-card">
+                <div class="section-header">
+                    <h3><i class="fas fa-calendar-check"></i> My Scheduled Meetings</h3>
+                    <span id="meetingCount" class="badge-count">0 meetings</span>
+                </div>
+                <div id="myMeetingsList" class="file-grid">
+                    <div class="loading-state">Loading meetings...</div>
+                </div>
+            </section>
+        </main>
+    </div>
+
+    <script src="auth.js"></script>
+    <script src="tutor.js"></script>
 
 </body>
+
 </html>
