--- a/tutor-portal.html
+++ b/tutor-portal.html
@@ -7,48 +7,156 @@
     <link rel="stylesheet" href="tutor.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <script src='https://meet.jit.si/external_api.js'></script>
+    <style>
+        /* Sidebar Layout Fixes */
+        body {
+            display: flex;
+            min-height: 100vh;
+            margin: 0;
+            background: #f4f7f9;
+        }
+
+        .sidebar {
+            width: 250px;
+            background: #000033;
+            color: white;
+            display: flex;
+            flex-direction: column;
+            position: fixed;
+            height: 100vh;
+            padding: 20px 0;
+            z-index: 100;
+        }
+
+        .sidebar-header {
+            padding: 0 20px 30px;
+            font-weight: bold;
+            font-size: 1.2rem;
+            color: #32cd32;
+            border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+            margin-bottom: 20px;
+        }
+
+        .nav-links {
+            list-style: none;
+            padding: 0;
+            flex-grow: 1;
+        }
+
+        .nav-item {
+            padding: 15px 25px;
+            display: flex;
+            align-items: center;
+            gap: 12px;
+            color: #7fdff0;
+            text-decoration: none;
+            transition: 0.3s;
+        }
+
+        .nav-item:hover,
+        .nav-item.active {
+            background: rgba(255, 255, 255, 0.1);
+            color: white;
+            border-left: 4px solid #32cd32;
+        }
+
+        .main-panel {
+            margin-left: 250px;
+            /* Space for sidebar */
+            flex: 1;
+            padding: 40px;
+            max-width: calc(100% - 250px);
+        }
+
+        .logout-link {
+            padding: 15px 25px;
+            color: #ff4757;
+            text-decoration: none;
+            border-top: 1px solid rgba(255, 255, 255, 0.1);
+        }
+
+        @media (max-width: 768px) {
+            .sidebar {
+                width: 70px;
+            }
+
+            .sidebar span {
+                display: none;
+            }
+
+            .main-panel {
+                margin-left: 70px;
+                max-width: calc(100% - 70px);
+            }
+        }
+    </style>
 </head>
 
 <body>
-    <div class="dashboard-wrapper">
-        <main class="main-panel">
-            <header class="panel-header">
-                <h1>Tutor Control Center</h1>
-            </header>
 
-            <section class="management-card" id="live-setup-section">
-                <div class="section-header">
-                    <h3><i class="fas fa-calendar-plus"></i> Schedule New Live Class</h3>
-                </div>
-                <div class="input-grid">
-                    <div class="input-group">
-                        <label>Class Topic</label>
-                        <input type="text" id="classTopic" placeholder="e.g. Grade 12 Math - Algebra">
-                    </div>
-                    <div class="input-group">
-                        <label>Lesson Description</label>
-                        <textarea id="classDesc" style="padding:10px; border-radius:8px; border:1px solid #ddd;"
-                            placeholder="What will students learn?"></textarea>
-                    </div>
-                </div>
-                <button class="btn-deploy" onclick="scheduleClass()"><i class="fas fa-save"></i> Save &
-                    Schedule</button>
-            </section>
+    <nav class="sidebar">
+        <div class="sidebar-header">
+            P2P <span style="color:white">TUTOR</span>
+        </div>
+        <div class="nav-links">
+            <a href="#" class="nav-item active"><i class="fas fa-th-large"></i> <span>Dashboard</span></a>
+            <a href="#" class="nav-item"><i class="fas fa-video"></i> <span>Live Classes</span></a>
+            <a href="#" class="nav-item"><i class="fas fa-folder-open"></i> <span>Resources</span></a>
+            <a href="#" class="nav-item"><i class="fas fa-users"></i> <span>Students</span></a>
+        </div>
+        <a href="#" class="logout-link" onclick="logout()"><i class="fas fa-sign-out-alt"></i> <span>Logout</span></a>
+    </nav>
 
-            <section id="video-area"
-                style="display: none; background: #000; border-radius: 12px; margin-top: 20px; min-height: 700px;">
-            </section>
+    <main class="main-panel">
+        <header class="panel-header" style="margin-bottom: 30px;">
+            <h1>Welcome, <span id="tutorNameDisplay">Tutor</span></h1>
+            <p>Manage your upcoming lessons and student engagement.</p>
+        </header>
 
-            <section class="management-card">
-                <div class="section-header">
-                    <h3><i class="fas fa-list"></i> My Scheduled Classes</h3>
+        <section class="management-card" id="live-setup-section">
+            <div class="section-header">
+                <h3><i class="fas fa-calendar-plus"></i> Schedule New Live Class</h3>
+            </div>
+            <div class="input-grid" style="display: grid; grid-template-columns: 1fr 1fr; gap: 20px; margin-top: 15px;">
+                <div class="input-group">
+                    <label>Class Topic</label>
+                    <input type="text" id="classTopic" placeholder="e.g. Algebra Basics">
                 </div>
-                <div id="myMeetingsList">
-                    <div class="loading-state">Loading your classes...</div>
+                <div class="input-group">
+                    <label>Target Grade</label>
+                    <select id="classGrade" style="width: 100%; padding: 10px; border-radius: 8px;">
+                        <option value="Grade 8">Grade 8</option>
+                        <option value="Grade 9">Grade 9</option>
+                        <option value="Grade 10">Grade 10</option>
+                        <option value="Grade 11">Grade 11</option>
+                        <option value="Grade 12">Grade 12</option>
+                    </select>
                 </div>
-            </section>
-        </main>
-    </div>
+            </div>
+            <div class="input-group" style="margin-top: 15px;">
+                <label>Lesson Description</label>
+                <textarea id="classDesc" style="width: 100%; padding: 10px; border-radius: 8px; min-height: 80px;"
+                    placeholder="Describe what learners will achieve..."></textarea>
+            </div>
+            <button class="btn-deploy" onclick="scheduleClass()" style="margin-top: 15px;">
+                <i class="fas fa-save"></i> Save & Schedule
+            </button>
+        </section>
+
+        <section id="video-area"
+            style="display: none; background: #000; border-radius: 12px; margin-top: 20px; min-height: 600px;">
+        </section>
+
+        <section class="management-card" style="margin-top: 30px;">
+            <div class="section-header">
+                <h3><i class="fas fa-list"></i> My Scheduled Classes</h3>
+            </div>
+            <div id="myMeetingsList" style="margin-top: 15px;">
+                <div class="loading-state">Syncing with server...</div>
+            </div>
+        </section>
+    </main>
+
     <script src="tutor.js"></script>
 </body>
 
