--- a/tutor-portal.html
+++ b/tutor-portal.html
@@ -5,13 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tutor Portal | Peer-2-Peer Pro</title>
-
     <link rel="stylesheet" href="tutor.css">
-
     <link rel="icon" type="image/x-icon" href="https://img.icons8.com/color/48/000000/graduation-cap.png">
-
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-
     <script src='https://meet.jit.si/external_api.js'></script>
 </head>
 
@@ -19,20 +15,16 @@
 
     <nav class="glass-nav">
         <div class="logo-container">
-            <img src="https://img.icons8.com/color/48/000000/graduation-cap.png" alt="P2P Logo" class="favicon-img"
-                style="width: 35px; height: 35px;">
-            <span class="brand-name">PEER-2-PEER <span style="color: var(--green);">PRO</span></span>
+            <img src="https://img.icons8.com/color/48/000000/graduation-cap.png" alt="Logo" class="favicon-img">
+            <span class="brand-name">PEER-2-PEER <span class="green-text">PRO</span></span>
         </div>
 
-        <div class="nav-right" style="display: flex; align-items: center; gap: 20px;">
-            <div class="user-pill"
-                style="display:flex; align-items:center; gap:10px; background: rgba(0,0,51,0.05); padding: 8px 18px; border-radius: 30px; border: 1px solid var(--green);">
-                <i class="fas fa-chalkboard-teacher" style="color: var(--navy);"></i>
-                <span id="tutorNameDisplay" style="font-weight: 700; color: var(--navy);">Teacher Name</span>
+        <div class="nav-right">
+            <div class="user-pill">
+                <i class="fas fa-chalkboard-teacher"></i>
+                <span id="tutorNameDisplay">Loading...</span>
             </div>
-
-            <button class="logout-minimal" onclick="logout()"
-                style="background:none; border:none; color:#ff4d4d; cursor:pointer; font-size: 1.2rem; transition: 0.3s;">
+            <button class="logout-btn" onclick="logout()">
                 <i class="fas fa-power-off"></i>
             </button>
         </div>
@@ -41,92 +33,57 @@
     <main class="main-panel">
         <div id="mainDashboard">
             <header class="panel-header">
-                <h1>Welcome Back, <span id="welcomeName" style="color: var(--green);">Teacher</span></h1>
-                <p>Manage your live classes and educational resources with the Peer-2-Peer Pro suite.</p>
+                <h1>Welcome Back, <span id="welcomeName" class="green-text">Teacher</span></h1>
+                <p>Strategic management of your academic sessions and resources.</p>
             </header>
 
             <div class="dashboard-grid">
-                <div class="dash-card card-featured" onclick="showSection('liveOrganizer')">
+                <div class="dash-card featured" onclick="showSection('liveOrganizer')">
                     <div class="card-icon"><i class="fas fa-video"></i></div>
-                    <div class="card-content">
-                        <h3>Live Class Organiser</h3>
-                        <p>Schedule new Jitsi sessions and manage your upcoming live classes.</p>
-                    </div>
+                    <h3>Live Class Organiser</h3>
+                    <p>Schedule and launch secure Jitsi video lessons.</p>
                 </div>
 
                 <div class="dash-card" onclick="showSection('resourceSharing')">
-                    <div class="card-icon"><i class="fas fa-file-export"></i></div>
+                    <div class="card-icon"><i class="fas fa-cloud-upload-alt"></i></div>
                     <h3>Resources</h3>
-                    <p>Upload and share study materials.</p>
+                    <p>Distribute study guides and notes.</p>
                 </div>
 
                 <div class="dash-card" onclick="showSection('tutorDashboard')">
-                    <div class="card-icon"><i class="fas fa-chart-line"></i></div>
+                    <div class="card-icon"><i class="fas fa-chart-pie"></i></div>
                     <h3>Analytics</h3>
-                    <p>Track student engagement.</p>
+                    <p>View student performance data.</p>
                 </div>
 
                 <div class="dash-card" onclick="showSection('p2pForum')">
                     <div class="card-icon"><i class="fas fa-comments"></i></div>
                     <h3>P2P Forum</h3>
-                    <p>Community discussions.</p>
-                </div>
-
-                <div class="dash-card card-wide" onclick="alert('Whiteboard Feature coming soon!')">
-                    <div class="card-icon"><i class="fas fa-chalkboard"></i></div>
-                    <div class="card-content">
-                        <h3>Interactive Whiteboard</h3>
-                        <p>Visual teaching tools for complex problem solving.</p>
-                    </div>
+                    <p>Join community discussions.</p>
                 </div>
             </div>
         </div>
 
         <section id="liveOrganizer" class="portal-section" style="display: none;">
-            <div style="margin-bottom: 20px;">
-                <button onclick="backToDash()" class="btn-deploy" style="background: var(--navy); color: white;">
-                    <i class="fas fa-arrow-left"></i> Back to Hub
-                </button>
-            </div>
-
-            <div id="live-setup-section" class="glass-form-container">
-                <h2>Schedule a <span style="color: var(--green);">Live Class</span></h2>
-                <div class="form-grid"
-                    style="display: grid; grid-template-columns: 1fr 1fr; gap: 20px; margin-top: 20px;">
-                    <div class="form-group">
-                        <label>Class Topic</label>
-                        <input type="text" id="classTopic" placeholder="e.g. Mathematics: Trigonometry">
-                    </div>
-                    <div class="form-group">
-                        <label>Grade Level</label>
-                        <select id="classGrade">
-                            <option>Grade 8</option>
-                            <option>Grade 9</option>
-                            <option>Grade 10</option>
-                            <option>Grade 11</option>
-                            <option>Grade 12</option>
-                        </select>
-                    </div>
+            <button class="back-link" onclick="backToDash()"><i class="fas fa-arrow-left"></i> Back to
+                Dashboard</button>
+            <div class="glass-form">
+                <h2>Schedule <span class="green-text">New Class</span></h2>
+                <div class="form-row">
+                    <input type="text" id="classTopic" placeholder="Lesson Topic">
+                    <select id="classGrade">
+                        <option>Grade 8</option>
+                        <option>Grade 9</option>
+                        <option>Grade 10</option>
+                        <option>Grade 11</option>
+                        <option>Grade 12</option>
+                    </select>
                 </div>
-                <div class="form-group" style="margin-top: 20px;">
-                    <label>Description</label>
-                    <textarea id="classDesc" style="height: 100px;"
-                        placeholder="Outline the lesson objectives..."></textarea>
-                </div>
-                <button class="btn-deploy" onclick="scheduleClass()" style="margin-top: 20px;">
-                    <i class="fas fa-plus-circle"></i> Create Session
-                </button>
-
-                <hr style="margin: 40px 0; border: 0; border-top: 1px solid var(--border);">
-
-                <h3>Upcoming Scheduled Classes</h3>
-                <div id="myMeetingsList" style="margin-top: 20px;">
-                </div>
+                <textarea id="classDesc" placeholder="Description..."></textarea>
+                <button class="primary-btn" onclick="scheduleClass()">Create Session</button>
             </div>
-
-            <div id="video-area"
-                style="display: none; height: 700px; border-radius: 20px; overflow: hidden; box-shadow: var(--shadow-xl);">
-            </div>
+            <div id="myMeetingsList" class="meetings-container"></div>
+            <div id="video-area"></div>
         </section>
     </main>
 
